# irc2phpbb

./: .gitignore  .pylintrc  README.md  discord_bot.py  docker-compose.yml  marvin_actions.py  marvin_strings.json  pyproject.toml  test_marvin_actions.py
.docker/irssi/: config
.docker/marvin/: Dockerfile
.github/workflows/: ci.yml  documentation.yml
irc2phpbb/: __main__.py  discord_bot.py  irc_bot.py  marvin_actions.py
irc2phpbb/data/: marvin_strings.json
powerPriceFiles/: singleAreaResponse.json
tests/: test_action.py  test_bbq.py  test_budord.py  test_commit.py  test_explainshell.py  test_google.py  test_hello.py  test_help.py  test_joke.py  test_lunch.py  test_main.py  test_marvin_actions.py  test_morning.py  test_nameday.py  test_powerprice.py  test_principle.py  test_quote.py  test_smile.py  test_source.py  test_stream.py  test_strip.py  test_sun.py  test_uptime.py  test_video.py  test_weather.py  test_whois.py
